--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>A nice page</title>
+        <link rel="stylesheet" href="www/css/style.css">
     </head>
     <body>
         <h1>This is a test page</h1>
