Added png support

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <body>
         <h1>This is a test page</h1>
         <p>With a nice paragraph</p>
+        <img src="www/Spike.png" alt="Wow">
     </body>
 </html>
