--- a/www/index.html
+++ b/www/index.html
@@ -4,8 +4,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>HTTPC</title>
-        <link rel="stylesheet" href="www/css/style.css">
-        <link rel="icon" href="www/Spike.png">
+        <link rel="stylesheet" href="css/style.css">
+        <link rel="icon" href="Spike.png">
     </head>
     <body>
         <main>
